# solana-trading-apps

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-laserstream.yml
apps/web/: package.json
bots/defituna-bot/: .env.example  .gitignore  Cargo.toml  Makefile  keypair_to_base58.py
bots/defituna-bot/src/: config.rs  defituna_client.rs  executor.rs  laserstream_client.rs  lib.rs  main.rs  metrics.rs  price_tracker.rs  solana_rpc_client.rs
bots/defituna-bot/src/strategies/: market_maker.rs  mod.rs
bots/jupiter-laserstream-bot/: .env.example  Cargo.toml  Makefile  README.md
bots/jupiter-laserstream-bot/src/: config.rs  executor.rs  jupiter_client.rs  laserstream_client.rs  lib.rs  main.rs  price_tracker.rs  swap_parser.rs
bots/jupiter-laserstream-bot/src/strategies/: dca.rs  mod.rs  momentum.rs
bots/jupiter-laserstream-bot/tests/: integration_tests.rs
bots/jupiter-laserstream-bot/utils/: test_jupiter.rs
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  VERCEL_DEPLOYMENT.md
docs/guides/: ADAPTER_TEMPLATE.md  JUPITER_VAULT_TASKS.md  STRATEGY_TEMPLATE.md
examples/jupiter-laserstream-bot/: .env.example  Cargo.toml  README.md
examples/jupiter-laserstream-bot/src/: config.rs  executor.rs  main.rs  metrics.rs
examples/jupiter-laserstream-bot/src/strategies/: mean_reversion.rs
laserstream-container/: Dockerfile  README.md  package.json  wrangler.jsonc
laserstream-container/container_src/src/: stream.rs
laserstream-container/src/: index.ts
scripts/: README.md
shared/laserstream/: Cargo.toml
shared/laserstream/cf-container/: Dockerfile  package.json  worker-configuration.d.ts  wrangler.jsonc
shared/laserstream/cf-container/container_src_rust/: Dockerfile
shared/laserstream/cf-container/container_src_rust/src/: main.rs  stream.rs
shared/laserstream/cloudflare/: .dev.vars.example  .env.example  .gitignore  README.md  REMOTE_BUILD.md  package.json  tsconfig.json  wrangler.dev.toml  wrangler.simple.toml  wrangler.toml
shared/laserstream/cloudflare/container/: Cargo.toml
shared/laserstream/cloudflare/src/: index.dev.js  index.dev.ts  index.js  index.ts  proxy.js  proxy.ts
shared/laserstream/src/: broadcaster.rs  config.rs  main.rs  metrics.rs  stream.rs
shared/websocket/: Cargo.toml  README.md
shared/websocket/src/: client.rs  config.rs  lib.rs  server.rs  types.rs
