[package]
name = "defituna-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana v2.x for LaserStream compatibility
solana-client = "2.1"
solana-sdk = "2.1"
anchor-client = "0.32"
anchor-lang = "0.32"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Time
chrono = "0.4"

# Utilities
bs58 = "0.5"
futures = "0.3"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }

# Solana program libraries
spl-token = "6.0"
spl-token-2022 = "6.0"
spl-associated-token-account = "6.0"

[dev-dependencies]
mockito = "1.2"

[[bin]]
name = "open_position"
path = "src/bin/open_position.rs"

[[bin]]
name = "place_order"
path = "src/bin/place_order.rs"

[[bin]]
name = "init_devnet_pool"
path = "src/bin/init_devnet_pool.rs"

[[bin]]
name = "open_spot_position"
path = "src/bin/open_spot_position.rs"

[[bin]]
name = "swap_sol_to_usdc"
path = "src/bin/swap_sol_to_usdc.rs"

[[bin]]
name = "set_limit_orders"
path = "src/bin/set_limit_orders.rs"

[[bin]]
name = "place_minimal_order"
path = "src/bin/place_minimal_order.rs"

[[bin]]
name = "check_position"
path = "src/bin/check_position.rs"

[[bin]]
name = "close_position"
path = "src/bin/close_position.rs"
