[package]
name = "jupiter-laserstream-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana (use 2.0+ for compatibility)
solana-client = "2.0"
solana-sdk = "2.0"
anchor-client = "0.32"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
bs58 = "0.5"
chrono = "0.4"
anyhow = "1"
thiserror = "1"
bincode = "1.3"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenv = "0.15"

# Metrics
prometheus = "0.13"

# Statistics
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"

[features]
backtest = []

[lib]
name = "jupiter_laserstream_bot"
path = "src/lib.rs"

[[bin]]
name = "jupiter-bot"
path = "src/main.rs"

[[example]]
name = "test_jupiter"
path = "utils/test_jupiter.rs"
