[package]
name = "jupiter-laserstream-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.32"

# WebSocket client
websocket-utils = { path = "../../shared/websocket" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
bs58 = "0.5"
chrono = "0.4"
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenv = "0.15"

# Metrics
prometheus = "0.13"

# Statistics
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"

[features]
backtest = []

[[bin]]
name = "jupiter-bot"
path = "src/main.rs"
