[package]
name = "websocket-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"

# Utilities
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "websocket_utils"
path = "src/lib.rs"
