[package]
name = "laserstream_container"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LaserStream Rust client
helius-laserstream = "0.1.5"

# For timestamp conversion (prost Timestamp -> RFC3339)
chrono = { version = "0.4", features = ["clock"] }
prost-types = "0.12"
